feat(daemon): persistent preview daemon — design + B1/B2 implementation (opt-in, speculative) (#303)